fixed business card preview alignments

--- a/css/card.scss
+++ b/css/card.scss
@@ -112,7 +112,7 @@ body {
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                padding: 110px 20px 33px;
+                padding: 115px 40px 33px;
                 text-align: left;
                 background-repeat: no-repeat;
                 background-position: left top;
@@ -139,7 +139,7 @@ body {
             
             width: 282px;
             height: 160px;
-            padding: 60px 15px 15px;
+            padding: 62px 22px 15px;
             font-family: 'Open Sans', sans-serif;
             color: #3d4643;
             background-image: url("../images/front.png");
@@ -155,7 +155,7 @@ body {
                 
                 .fullName {
                     line-height: 0;
-                    font-size: 75%;
+                    font-size: 65%;
                     text-transform: uppercase;
                     
                     #credential {
@@ -169,7 +169,7 @@ body {
             .bottom {
                 
                 padding-top: 20px;
-                font-size: 60%;
+                font-size: 55%;
                 line-height: 1.25;
                 
                 .contactInfo {
@@ -188,7 +188,7 @@ body {
             }
             
             #title, #businessUnit, #org {
-                font-size: 60%;
+                font-size: 55%;
             }
             
         }
